# pokeplatinum

./: Makefile
include/overlay021/: funcptr_ov21_021D41EC.h  funcptr_ov21_021D420C.h  ov21_021D1FA4.h  ov21_021D3FE0.h  ov21_021D423C.h  ov21_021D4340.h  ov21_021D4C0C.h  ov21_021D5AEC.h  ov21_021D76B0.h  ov21_021D94BC.h  ov21_021DC9BC.h  ov21_021DDD2C.h  ov21_021DE668.h  ov21_021DF734.h  ov21_021E0C68.h  ov21_021E1924.h  ov21_021E29DC.h  ov21_021E3FFC.h  ov21_021E4CA4.h  ov21_021E68F4.h  ov21_021E737C.h  ov21_021E8484.h  pokedex_app.h  pokedex_display_box.h  pokedex_graphic_data.h  pokedex_height_check.h  pokedex_main.h  pokedex_panel.h  pokedex_search.h  pokedex_text_manager.h  struct_ov21_021D22F8.h  struct_ov21_021D2584.h  struct_ov21_021D2648.h  struct_ov21_021D3124.h  struct_ov21_021D4008.h  struct_ov21_021D4340.h  struct_ov21_021D4434.h  struct_ov21_021D4558.h  struct_ov21_021D4660.h  struct_ov21_021DE6D4.h  (+3 more)
platinum.us/: filesys.csv  filesys.sha1  main.lsf
res/: meson.build
res/graphics/: meson.build
res/graphics/pokedex/: banner_cell.json  cry_dials.pal  cry_dials_cell.json  cursor.pal  cursor_cell.json  dummy4.pal  dungeon_highlight_cell.json  form_display_box.pal  form_display_box_cell.json  info_language_buttons_cell.json  meson.build  name_tag_cell.json  page_buttons_cell.json  pokedex.order  scroll_buttons_cell.json  search_body_shapes_cell.json  search_button_forms_cell.json  search_buttons_cell.json  size_buttons_pressed_cell.json  size_check_icons_cell.json  time_day_icons_cell.json  type_icons_cell.json  unseen_icon_cell.json
res/pokemon/: meson.build
res/pokemon/arceus/: meson.build
res/pokemon/blissey/: meson.build
res/pokemon/burmy/: meson.build
res/pokemon/castform/: meson.build
res/pokemon/cherrim/: meson.build
res/pokemon/deoxys/: meson.build
res/pokemon/gastrodon/: meson.build
res/pokemon/giratina/: meson.build
res/pokemon/manaphy/: meson.build
res/pokemon/none/: meson.build
res/pokemon/rotom/: meson.build
res/pokemon/shaymin/: meson.build
res/pokemon/shellos/: meson.build
res/pokemon/snorunt/: meson.build
res/pokemon/unown/: meson.build
res/pokemon/wormadam/: meson.build
res/trainers/classes/: field_encounteffect.order
res/trainers/classes/.shared/: enc_galactic_cell.json  enc_trainer_high_cell.json  enc_trainer_low_cell.json  frontier_vs_cell.json  league_banner_cell.json  league_vs_cell.json
res/trainers/classes/ace_trainer_male/: front.pal
res/trainers/classes/ace_trainer_snow_female/: front.pal  front_cell.json
res/trainers/classes/arcade_star/: front_cell.json  mugshot_cell.json
res/trainers/classes/aroma_lady/: front.pal
res/trainers/classes/artist/: front.pal
res/trainers/classes/battle_girl/: front.pal
res/trainers/classes/beauty/: front.pal
res/trainers/classes/bird_keeper/: front.pal
res/trainers/classes/black_belt/: front.pal
res/trainers/classes/breeder_male/: front.pal
res/trainers/classes/bug_catcher/: front.pal
res/trainers/classes/cameraman/: front.pal
res/trainers/classes/camper/: front.pal
res/trainers/classes/castle_valet/: front_cell.json  mugshot_cell.json
res/trainers/classes/champion_cynthia/: front_cell.json
res/trainers/classes/clown/: front.pal
res/trainers/classes/collector/: front.pal
res/trainers/classes/commander_jupiter/: front.pal
res/trainers/classes/commander_mars/: front.pal
res/trainers/classes/commander_saturn/: front.pal
res/trainers/classes/cyclist_female/: front.pal
res/trainers/classes/cyclist_male/: front.pal
res/trainers/classes/dp_player_female/: front.pal
res/trainers/classes/dragon_tamer/: front.pal
res/trainers/classes/elite_four_aaron/: front_cell.json
res/trainers/classes/elite_four_bertha/: front_cell.json
res/trainers/classes/elite_four_flint/: front_cell.json
res/trainers/classes/elite_four_lucian/: front_cell.json
res/trainers/classes/factory_head/: front_cell.json
res/trainers/classes/fisherman/: front.pal
res/trainers/classes/galactic_boss/: front.pal  front_cell.json
res/trainers/classes/galactic_grunt_male/: front.pal
res/trainers/classes/gentleman/: front.pal
res/trainers/classes/guitarist/: front.pal
res/trainers/classes/hall_matron/: front.pal  front_cell.json
res/trainers/classes/hiker/: front.pal
res/trainers/classes/idol/: front.pal
res/trainers/classes/interviewers/: front.pal
res/trainers/classes/jogger/: front.pal
res/trainers/classes/lady/: front.pal
res/trainers/classes/lass/: front.pal
res/trainers/classes/leader_byron/: front_cell.json
res/trainers/classes/leader_candice/: front_cell.json
res/trainers/classes/leader_fantina/: front_cell.json
res/trainers/classes/leader_gardenia/: front_cell.json
res/trainers/classes/leader_maylene/: front_cell.json
res/trainers/classes/leader_roark/: front_cell.json
res/trainers/classes/leader_volkner/: front_cell.json
res/trainers/classes/leader_wake/: front_cell.json
res/trainers/classes/maid/: front.pal
res/trainers/frontier/: frontier_pokemon.order  frontier_trainers.order
src/: meson.build  unk_020655F4.c
src/applications/pokedex/: ov21_021D5AEC.c  ov21_021D76B0.c  ov21_021D94BC.c  ov21_021DC9BC.c  ov21_021DDD2C.c  ov21_021DE668.c  ov21_021DF734.c  ov21_021E0C68.c  ov21_021E1924.c  ov21_021E29DC.c  ov21_021E3FFC.c  ov21_021E4CA4.c  ov21_021E68F4.c  ov21_021E737C.c  ov21_021E8484.c  ov21_021E8D48.c  pokedex_graphics.c  pokedex_height_check.c  pokedex_search.c
src/overlay021/: ov21_021D1FA4.c  ov21_021D3FE0.c  ov21_021D423C.c  ov21_021D4340.c  ov21_021D4C0C.c  ov21_021D5AEC.c  ov21_021D76B0.c  ov21_021D94BC.c  ov21_021DC9BC.c  ov21_021DDD2C.c  ov21_021DE668.c  ov21_021DF734.c  ov21_021E0C68.c  ov21_021E1924.c  ov21_021E29DC.c  ov21_021E3FFC.c  ov21_021E4CA4.c  ov21_021E68F4.c  ov21_021E737C.c  ov21_021E8484.c  ov21_021E8D48.c  pokedex_height_check.c  pokedex_main.c  pokedex_panel.c  pokedex_search.c
subprojects/: nitrogfx.wrap
tools/dataproc/src/: common.h  speciesproc.c
tools/scripts/: make_field_encounteffect.py  make_pokefoot.py  make_trbgra.py  make_trfgra.py
(+49 files in other folders)
