species_data_files += files('data.json')

poke_icon_files += files('icon.png')

pokegra_files += files('female_back.png')
pokegra_files += files('male_back.png')
pokegra_files += files('female_front.png')
pokegra_files += files('male_front.png')

# Species 000 has special palettes; they are included here in their raw form,
# rather than being derived from the decompiled PNGs.
none_NCLR += files('normal.NCLR')
none_NCLR += files('shiny.NCLR')

pokefoot_files += files('footprint.png')
